--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desert Shop</title>
-    <link rel="stylesheet" href="C:\MLDI\sigmaboy.css">
+    <link rel="stylesheet" href="sigmaboy.css">
 
 </head>
 
