--- a/11a.html
+++ b/11a.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Clickable Boxes with Links</title>
+  <title>Nigma</title>
   <style>
     .NIGMA {
       display: grid;
@@ -25,6 +25,7 @@
       font-weight: bold;
       cursor: pointer;
       transition: background-color 0.3s;
+      background-color: rgb(112, 146, 173);
     }
 
     .box:hover {
