--- a/11a.html
+++ b/11a.html
@@ -2,56 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Duk</title>
+  <title>Muldi</title>
   <style>
-    .Duk {
+    .Mldi {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      gap: 10px;
-      padding: 10px;
+      gap: 20px;
+      padding: 20px;
     }
 
- 
+    .box-exercise{
+      text-decoration: none;
+      color: inherit;
+    }
 
     .box {
-      border: 1px solid #ff0000;
+      border: 1px solid #333;
       padding: 20px;
-      background-color: #d6d1d1;
+      background-color: #f0f0f0;
       text-align: center;
       font-size: 16px;
       font-weight: bold;
-      border-radius: 10px;
-       }
+      cursor: pointer;
+      transition: background-color 0.3s;
+      
+    }
 
 
   </style>
 </head>
 <body>
-    <h1 style="color: green">11A Dulguun-Erdene</h1>
+    <h1>11A Munkhdelger</h1>
 
-<div class="Duk">
-    <a href="https://dxlgnnn.github.io/dessertshop/" class="Yamete" target="Tralalero">
+<div class="Mldi">
+    <a href="https://muuldii1.github.io/Dessertshop/" class="Yamete" target="Tralalero">
         <div class="box">Dessert shop</div>
     </a> 
-    <a href="https://dxlgnnn.github.io/dessertshop/exercise1.html" class="Yamete" target="Tralalero">
+    <a href="https://muuldii1.github.io/Dessertshop/exercise1.html" class="Yamete" target="Tralalero">
     <div class="box">exercise1</div>
   </a>
-  <a href="https://dxlgnnn.github.io/dessertshop/exercise2.html" class="Yamete" target="Tralalero">
+  <a href="https://muuldii1.github.io/Dessertshop/exercise2.html" class="Yamete" target="Tralalero">
     <div class="box">exercise2</div>
   </a>
-  <a href="https://dxlgnnn.github.io/dessertshop/exercise3.html" class="Yamete" target="Tralalero">
+  <a href="https://muuldii1.github.io/Dessertshop/exercise3.html" class="Yamete" target="Tralalero">
     <div class="box">exercise3</div>
   </a>
-  <a href="https://dxlgnnn.github.io/dessertshop/exercise4.html" class="Yamete" target="Tralalero">
+  <a href="https://muuldii1.github.io/Dessertshop/exercise4.html" class="Yamete" target="Tralalero">
     <div class="box">exercise4</div>
   </a>
-  <a href="https://dxlgnnn.github.io/dessertshop/exercise5.html" class="Yamete" target="Tralalero">
+  <a href="https://muuldii1.github.io/Dessertshop/exercise5.html" class="Yamete" target="Tralalero">
     <div class="box">exercise5</div>
   </a>
-  <a href="https://dxlgnnn.github.io/dessertshop/exercise6.html" class="Yamete" target="Tralalero">
+  <a href="https://muuldii1.github.io/Dessertshop/exercise6.html" class="Yamete" target="Tralalero">
     <div class="box">exercise6</div>
   </a>
-  <a href="https://dxlgnnn.github.io/dessertshop/exercise7.html" class="Yamete" target="Tralalero">
+  <a href="https://muuldii1.github.io/Dessertshop/exercise7.html" class="Yamete" target="Tralalero">
     <div class="box">exercise7</div>
   </a>
 
